# autonomy_2023_24

./: README.md  autonomy.launch.py  frames_2024-02-11_18.43.58.gv  installs.txt  launch-autonomy.bash
aruco_detection/camera_calibration/: cam_calibration_wizard.py
aruco_detection/launch/: aruco_detection_launch.py
aruco_detection/ros2_ws/: test.py
config_cool/: launch_arguments.py
frames/: frames_2024-02-27_23.09.46.gv
gps/: base_gps.launch.py  gps.launch.py  launch_notes.txt  rover_gps.launch.py  test_gps.launch.py
gps/RTK_Testing_12-24/: absolute-heading-visualizer-2.py  absolute-heading-visualizer.py  get-rtcm3-data-2.py  get-rtcm3-data.py  get-ubx.py  notes.txt  rover-config-2.txt  survey-in-config.txt
gps/archive/: pub_navsatfix.bash
gps/gps_configs/: get-coords.py  get-rcm3-data.py  gps_compassing_ublox.py  moving-base.txt  moving-rover.txt  rover-config-3.txt  rover-config-4.txt  static-base-config-2.txt  static-base-config.txt
gps/install/: local_setup.sh  setup.sh
gps/log/: latest_build
gps/old_testing/: adafruit_gps_driver.py  gps_compassing_ublox.py  gps_publisher.py  ublox_gps_driver.py
led_indicator/: package.xml  setup.cfg  setup.py
led_indicator/led_arduino/: led_arduino.ino
led_indicator/led_indicator/: led_indicator.py
lidar/: frames_2024-01-09_21.58.44.gv  launch_notes.txt  lidar.launch.py
nav2/: frames_2023-11-15_00.04.44.gv  launch_notes.txt  map_tf.launch.xml  mapviz-config.mvc  navigation.launch.py  rosbag_gpsheading.bash  rosbag_navsatfix.bash  rosbag_zedodom.bash
nav2/config/: nav2_config.yaml  nav2_config2.yaml  nav2_config3.yaml  nav2_config4.yaml  nav2_config5.yaml
nav2/drive_kinematics/: package.xml  setup.cfg  setup.py
nav2/py_pubsub/: setup.py
nav2/rosbag2_2024_02_25-16_59_15/: metadata.yaml  rosbag2_2024_02_25-16_59_15_0.db3
nav2/rover_heading_rosbag/: metadata.yaml  rosbag2_2024_02_15-17_22_55_0.db3
nav2/rover_navsatfix_rosbag/: metadata.yaml  rosbag2_2024_02_15-17_20_49_0.db3
navX/imu_driver/: CMakeLists.txt
navX/imu_driver/src/: CMakeCache.txt  Makefile  NavXTimeStamp  cmake_install.cmake  publisher_member_function.cpp
navigation2_tutorials/: launch_notes.txt  waypoint_1.yaml  waypoint_2.yaml
rosbags/: bags.launch.py
spiral-search/: package.xml  setup.cfg  setup.py
tag_detection/: setup.py
zed_ros2/: launch_notes.txt  zed.launch.py
(+107 files in other folders)
